# Paste-Plus

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
paste_plus/: __main__.py  cli.py  config.py  engine.py  ui.py
tests/: test_paste_plus.py
